--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,8 @@
         First Name: <input type="text" name="first_name"><br>
         Middle Name: <input type="text" name="middle_name"><br>
         Last Name: <input type="text" name="last_name"><br>
+        Designation: <input type="text" name="designation"><br>
+        Company Name: <input type="text" name="company_name"><br>
         Work Phone: <input type="text" name="phone_work"><br>
         Personal Phone: <input type="text" name="phone_personal"><br>
         Personal Phone 2: <input type="text" name="phone_personal_2"><br>
