--- a/templates/result.html
+++ b/templates/result.html
@@ -6,6 +6,8 @@
 </head>
 <body>
     <h1>QR Code Result</h1>
+    <p>Scan the QR code below to view the details:</p>
     <img src="data:image/png;base64,{{ img_b64 }}" alt="QR Code">
+    <p>Or <a href="{{ display_url }}">click here</a> to view the details directly.</p>
 </body>
 </html>
