--- a/templates/result.html
+++ b/templates/result.html
@@ -6,8 +6,9 @@
 </head>
 <body>
     <h1>QR Code Result</h1>
-    <p>Scan the QR code below to view the details:</p>
-    <img src="data:image/png;base64,{{ img_b64 }}" alt="QR Code">
-    <p>Or <a href="{{ display_url }}">click here</a> to view the details directly.</p>
+    <p>Scan the QR code below to view the details.</p>
+<img src="data:image/png;base64,{{ img_b64 }}" alt="QR Code">
+<p>Or <a href="{{ display_url }}" target="_blank">click here</a> to view the details directly.</p>
+
 </body>
 </html>
