--- a/static/style.css
+++ b/static/style.css
@@ -13,7 +13,7 @@
 
 body {
     font-family: 'Poppins', sans-serif;
-    background: linear-gradient(135deg, #89f7fe, #66a6ff);
+    background: linear-gradient(135deg, #fefefe, #fefefe);
     display: flex;
     justify-content: center;
     align-items: center;
